# sam3x-example

./: Cargo.toml  README.md  jlink-server.gdb  memory.x  openocd.cfg
.cargo/: config.toml
src/: main.rs
