[package]
name = "sam3x-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
sam3x8e = { version = "0.1", features = ["rt"], path = "../sam3x8e" }

[[bin]]
name = "sam3x-example"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
